--- a/dev06-portfolio.html
+++ b/dev06-portfolio.html
@@ -7,9 +7,7 @@
 		<!--INSERTION POINT FOR BOOTSTRAP-->
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+			
 			<!--END OF BOOTSTRAP INSTALLION CODE-->
 			
 		<link href="layoutStyles.css" rel="stylesheet" type="text/css">
@@ -88,5 +86,8 @@
 	
 	</div>
 	</div>
-
+<		script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	</body>
 </html>
